--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -23,9 +23,11 @@ development: &default
   stripe_secret_key: <%= ENV["STRIPE_SECRET_KEY"] %>
   paypal_client_id: <%= ENV["PAYPAL_CLIENT_ID"] %>
   paypal_client_secret: <%= ENV["PAYPAL_CLIENT_SECRET"] %>
-  host_name: "c5c88ef5.ngrok.io"
+  host_name: "54d8edbb.ngrok.io"
   rollbar_server_side_access_token: "d71384afb5e6466796261a57ca9603cc"
   authy_key: <%= ENV["AUTHY_KEY"] %>
+  tax_cloud_login: <%= ENV["TAX_CLOUD_LOGIN"] %>
+  tax_cloud_key: <%= ENV["TAX_CLOUD_KEY"] %>
 
 test:
   <<: *default
