--- a/spec/vcr_cassettes/CreatesPlan/creates_a_plan.yml
+++ b/spec/vcr_cassettes/CreatesPlan/creates_a_plan.yml
@@ -5,18 +5,18 @@ http_interactions:
     uri: https://api.stripe.com/v1/plans
     body:
       encoding: UTF-8
-      string: id=basic_monthly_1522622390&product[name]=Basic+Monthly&amount=2000&currency=usd&interval=month&interval_count=1&nickname=Basic+Monthly
+      string: id=basic_monthly_1524163679&product[name]=Basic+Monthly&amount=2000&currency=usd&interval=month&interval_count=1&nickname=Basic+Monthly
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.11.0
+      - Stripe/v1 RubyBindings/3.12.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
-        MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
-        09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
+      - '{"bindings_version":"3.12.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+        MacBook-Pro-Alexander.local 17.5.0 Darwin Kernel Version 17.5.0: Mon Mar  5
+        22:24:32 PST 2018; root:xnu-4570.51.1~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -29,7 +29,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Sun, 01 Apr 2018 22:39:51 GMT
+      - Thu, 19 Apr 2018 18:48:01 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_XUNIFWAhbPAGKS
+      - req_y3X7JUukcLCR0U
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,18 +58,18 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "basic_monthly_1522622390",
+          "id": "basic_monthly_1524163679",
           "object": "plan",
           "amount": 2000,
           "billing_scheme": "per_unit",
-          "created": 1522622391,
+          "created": 1524163681,
           "currency": "usd",
           "interval": "month",
           "interval_count": 1,
           "livemode": false,
           "metadata": {},
           "nickname": "Basic Monthly",
-          "product": "prod_CbRjZsnkux8Rnt",
+          "product": "prod_Ci830asZS0gIGU",
           "tiers": null,
           "tiers_mode": null,
           "transform_usage": null,
@@ -77,24 +77,24 @@ http_interactions:
           "usage_type": "licensed"
         }
     http_version: 
-  recorded_at: Sun, 01 Apr 2018 22:39:52 GMT
+  recorded_at: Thu, 19 Apr 2018 18:48:01 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/plans/basic_monthly_1522622390
+    uri: https://api.stripe.com/v1/plans/basic_monthly_1524163679
     body:
       encoding: US-ASCII
       string: ''
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.11.0
+      - Stripe/v1 RubyBindings/3.12.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
-        MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
-        09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
+      - '{"bindings_version":"3.12.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+        MacBook-Pro-Alexander.local 17.5.0 Darwin Kernel Version 17.5.0: Mon Mar  5
+        22:24:32 PST 2018; root:xnu-4570.51.1~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -107,7 +107,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Sun, 01 Apr 2018 22:39:53 GMT
+      - Thu, 19 Apr 2018 18:48:02 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -127,7 +127,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_OnnHEjKfk7lZDW
+      - req_yfkgMK1wRgGQ9X
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -136,18 +136,18 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "basic_monthly_1522622390",
+          "id": "basic_monthly_1524163679",
           "object": "plan",
           "amount": 2000,
           "billing_scheme": "per_unit",
-          "created": 1522622391,
+          "created": 1524163681,
           "currency": "usd",
           "interval": "month",
           "interval_count": 1,
           "livemode": false,
           "metadata": {},
           "nickname": "Basic Monthly",
-          "product": "prod_CbRjZsnkux8Rnt",
+          "product": "prod_Ci830asZS0gIGU",
           "tiers": null,
           "tiers_mode": null,
           "transform_usage": null,
@@ -155,5 +155,5 @@ http_interactions:
           "usage_type": "licensed"
         }
     http_version: 
-  recorded_at: Sun, 01 Apr 2018 22:39:53 GMT
+  recorded_at: Thu, 19 Apr 2018 18:48:03 GMT
 recorded_with: VCR 4.0.0
