--- a/spec/vcr_cassettes/ExecutesStripePayment/successful_credit_card_payment/takes_the_response_from_the_gateway.yml
+++ b/spec/vcr_cassettes/ExecutesStripePayment/successful_credit_card_payment/takes_the_response_from_the_gateway.yml
@@ -29,7 +29,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 17 Apr 2018 12:18:53 GMT
+      - Thu, 19 Apr 2018 18:47:47 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_aoSiyhUpfxWbyj
+      - req_vXP4dC3G2077Ee
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1CHsltG9Bw4keQMbaDdJt84C",
+          "id": "tok_1CIhnLG9Bw4keQMbvi470KUV",
           "object": "token",
           "card": {
-            "id": "card_1CHsltG9Bw4keQMbv7oGs41g",
+            "id": "card_1CIhnLG9Bw4keQMb5zmR4el6",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,20 +84,20 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "212.178.18.56",
-          "created": 1523967533,
+          "client_ip": "176.119.73.85",
+          "created": 1524163667,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Tue, 17 Apr 2018 12:18:53 GMT
+  recorded_at: Thu, 19 Apr 2018 18:47:47 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: UTF-8
-      string: amount=2500&currency=usd&source=tok_1CHsltG9Bw4keQMbaDdJt84C&description=&metadata[reference]=8d1b8438752cf7e4c14c
+      string: amount=2500&currency=usd&source=tok_1CIhnLG9Bw4keQMbvi470KUV&description=&metadata[reference]=d97f3ea11f0d7e12b9c0
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.12.0
@@ -110,7 +110,7 @@ http_interactions:
         MacBook-Pro-Alexander.local 17.5.0 Darwin Kernel Version 17.5.0: Mon Mar  5
         22:24:32 PST 2018; root:xnu-4570.51.1~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Idempotency-Key:
-      - 8d1b8438752cf7e4c14c
+      - d97f3ea11f0d7e12b9c0
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -123,7 +123,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 17 Apr 2018 12:18:55 GMT
+      - Thu, 19 Apr 2018 18:47:49 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -143,11 +143,11 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Idempotency-Key:
-      - 8d1b8438752cf7e4c14c
+      - d97f3ea11f0d7e12b9c0
       Original-Request:
-      - req_mwQhJnUBK5nsT7
+      - req_womZbiHOrJEVVH
       Request-Id:
-      - req_mwQhJnUBK5nsT7
+      - req_womZbiHOrJEVVH
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -156,15 +156,15 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "ch_1CHsluG9Bw4keQMbkG7iSEaq",
+          "id": "ch_1CIhnMG9Bw4keQMb9FgpUB7d",
           "object": "charge",
           "amount": 2500,
           "amount_refunded": 0,
           "application": null,
           "application_fee": null,
-          "balance_transaction": "txn_1CHsluG9Bw4keQMbBu85h79t",
+          "balance_transaction": "txn_1CIhnMG9Bw4keQMbrJn5LjX9",
           "captured": true,
-          "created": 1523967534,
+          "created": 1524163668,
           "currency": "usd",
           "customer": null,
           "description": "",
@@ -176,7 +176,7 @@ http_interactions:
           "invoice": null,
           "livemode": false,
           "metadata": {
-            "reference": "8d1b8438752cf7e4c14c"
+            "reference": "d97f3ea11f0d7e12b9c0"
           },
           "on_behalf_of": null,
           "order": null,
@@ -196,12 +196,12 @@ http_interactions:
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/charges/ch_1CHsluG9Bw4keQMbkG7iSEaq/refunds"
+            "url": "/v1/charges/ch_1CIhnMG9Bw4keQMb9FgpUB7d/refunds"
           },
           "review": null,
           "shipping": null,
           "source": {
-            "id": "card_1CHsltG9Bw4keQMbv7oGs41g",
+            "id": "card_1CIhnLG9Bw4keQMb5zmR4el6",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -231,5 +231,5 @@ http_interactions:
           "transfer_group": null
         }
     http_version: 
-  recorded_at: Tue, 17 Apr 2018 12:18:55 GMT
+  recorded_at: Thu, 19 Apr 2018 18:47:49 GMT
 recorded_with: VCR 4.0.0
