--- a/spec/vcr_cassettes/StripeCharge/success/calls_stripe_to_get_a_charge.yml
+++ b/spec/vcr_cassettes/StripeCharge/success/calls_stripe_to_get_a_charge.yml
@@ -29,7 +29,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 17 Apr 2018 12:19:23 GMT
+      - Thu, 19 Apr 2018 18:48:05 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_U4TgBSbGDIA6nC
+      - req_CyQ2uTsdKqy4wN
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1CHsmNG9Bw4keQMb19wL0l36",
+          "id": "tok_1CIhndG9Bw4keQMbXqx6cMrn",
           "object": "token",
           "card": {
-            "id": "card_1CHsmNG9Bw4keQMbQN4TFm9i",
+            "id": "card_1CIhndG9Bw4keQMb42hzKgf9",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,20 +84,20 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "212.178.18.56",
-          "created": 1523967563,
+          "client_ip": "176.119.73.85",
+          "created": 1524163685,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Tue, 17 Apr 2018 12:19:23 GMT
+  recorded_at: Thu, 19 Apr 2018 18:48:06 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: UTF-8
-      string: amount=3000&currency=usd&source=tok_1CHsmNG9Bw4keQMb19wL0l36&description=&metadata[reference]=a04a4f47b1e7f25ebad6
+      string: amount=3000&currency=usd&source=tok_1CIhndG9Bw4keQMbXqx6cMrn&description=&metadata[reference]=62c68b3f296fc8b3ade8
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.12.0
@@ -110,7 +110,7 @@ http_interactions:
         MacBook-Pro-Alexander.local 17.5.0 Darwin Kernel Version 17.5.0: Mon Mar  5
         22:24:32 PST 2018; root:xnu-4570.51.1~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Idempotency-Key:
-      - a04a4f47b1e7f25ebad6
+      - 62c68b3f296fc8b3ade8
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -123,7 +123,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 17 Apr 2018 12:19:25 GMT
+      - Thu, 19 Apr 2018 18:48:07 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -143,11 +143,11 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Idempotency-Key:
-      - a04a4f47b1e7f25ebad6
+      - 62c68b3f296fc8b3ade8
       Original-Request:
-      - req_6mlTdrzwZyNFDs
+      - req_ggCMNJmgVHep4i
       Request-Id:
-      - req_6mlTdrzwZyNFDs
+      - req_ggCMNJmgVHep4i
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -156,15 +156,15 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "ch_1CHsmOG9Bw4keQMbQDRaO9Mb",
+          "id": "ch_1CIhnfG9Bw4keQMb8kgrHgKL",
           "object": "charge",
           "amount": 3000,
           "amount_refunded": 0,
           "application": null,
           "application_fee": null,
-          "balance_transaction": "txn_1CHsmPG9Bw4keQMbZZ7E6LfY",
+          "balance_transaction": "txn_1CIhnfG9Bw4keQMbz9lFRR70",
           "captured": true,
-          "created": 1523967564,
+          "created": 1524163687,
           "currency": "usd",
           "customer": null,
           "description": "",
@@ -176,7 +176,7 @@ http_interactions:
           "invoice": null,
           "livemode": false,
           "metadata": {
-            "reference": "a04a4f47b1e7f25ebad6"
+            "reference": "62c68b3f296fc8b3ade8"
           },
           "on_behalf_of": null,
           "order": null,
@@ -196,12 +196,12 @@ http_interactions:
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/charges/ch_1CHsmOG9Bw4keQMbQDRaO9Mb/refunds"
+            "url": "/v1/charges/ch_1CIhnfG9Bw4keQMb8kgrHgKL/refunds"
           },
           "review": null,
           "shipping": null,
           "source": {
-            "id": "card_1CHsmNG9Bw4keQMbQN4TFm9i",
+            "id": "card_1CIhndG9Bw4keQMb42hzKgf9",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -231,5 +231,5 @@ http_interactions:
           "transfer_group": null
         }
     http_version: 
-  recorded_at: Tue, 17 Apr 2018 12:19:25 GMT
+  recorded_at: Thu, 19 Apr 2018 18:48:08 GMT
 recorded_with: VCR 4.0.0
