--- a/spec/vcr_cassettes/StripeToken/calls_stripe_to_get_a_token.yml
+++ b/spec/vcr_cassettes/StripeToken/calls_stripe_to_get_a_token.yml
@@ -29,7 +29,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 17 Apr 2018 12:19:17 GMT
+      - Thu, 19 Apr 2018 18:47:43 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_gacIncm6Jx2xJm
+      - req_Sn5QsyqI51sl3g
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1CHsmHG9Bw4keQMbjyGXu7c0",
+          "id": "tok_1CIhnHG9Bw4keQMbeslJAZjw",
           "object": "token",
           "card": {
-            "id": "card_1CHsmGG9Bw4keQMbUUtAdTCI",
+            "id": "card_1CIhnGG9Bw4keQMbNtFVFtU0",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,12 +84,12 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "212.178.18.56",
-          "created": 1523967557,
+          "client_ip": "176.119.73.85",
+          "created": 1524163663,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Tue, 17 Apr 2018 12:19:17 GMT
+  recorded_at: Thu, 19 Apr 2018 18:47:43 GMT
 recorded_with: VCR 4.0.0
